--- a/springmvcjdbc/pom.xml
+++ b/springmvcjdbc/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.brainmentors</groupId>
 	<artifactId>springmvcjdbc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>springmvcjdbc</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
@@ -54,7 +54,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
